# notes-app

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4f5410dae104_initial_schema.py
src/: db.py  main.py
src/config/: settings.py
src/crud/: auth_crud.py  user_crud.py
src/dependencies/: auth.py  db.py  security_scheme.py
src/models/: __init__.py  note_model.py  user_model.py
src/routers/: auth_router.py  router.py  user_router.py
src/schemas/: auth_schemas.py  user_schemas.py
src/utils/: jwt_utils.py  security.py
